<resources>
    <string name="app_name">My Contacts List v.3</string>
    <string name="button_to_display_a_list_of_contacts">Button to display a list of contacts</string>
    <string name="button_to_display_map_locations_of_contacts">Button to display map locations of contacts</string>
    <string name="button_to_change_settings">Button to change settings</string>
    <string name="save_button">Save</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="contact">Contact:</string>
    <string name="address">Address:</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="email_address">Email Address:</string>
    <string name="bday">Birthday:</string>
    <string name="birthday">01/01/1970</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="information_missing">Information Not Maintained</string>
    <string name="delete">Delete</string>
    <string name="no_number">No Number</string>
    <string name="no_address_saved">No Address Saved</string>
    <string name="dash_out">-----------------</string>
    <string name="no_cell">No Cell</string>
    <string name="confirm_cord">Confirm Corrdinates</string>
</resources>