<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactMapActivity">
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button_to_display_a_list_of_contacts"
            app:srcCompat="@drawable/contactlisticon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button_to_display_map_locations_of_contacts"
            app:srcCompat="@drawable/mapicon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button_to_change_settings"
            app:srcCompat="@drawable/settingsicon"
            tools:ignore="RedundantDescriptionCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:ems="16"
        android:hint="@string/enter_street_address"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAddress" />

    <EditText
        android:id="@+id/editCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAddress"
        android:ems="9"
        android:hint="@string/city"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/editState"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/editCity"
        app:layout_constraintTop_toBottomOf="@id/editAddress"
        android:ems="2"
        android:hint="@string/state"
        android:maxLength="2"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/editZipcode"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/editZipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/editState"
        app:layout_constraintTop_toBottomOf="@id/editAddress"
        android:ems="5"
        android:hint="@string/zipcode"
        android:maxLength="5"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/editHome"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonGetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/confirm_cord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCity" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop = "20dp"
        android:hint="@string/dash_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonGetLocation"/>

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop ="20dp"
        android:hint="@string/dash_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLatitude" />

    <TextView
        android:id="@+id/textAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/dash_out"
        app:layout_constraintTop_toBottomOf="@+id/textLongitude"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>