<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button_to_display_a_list_of_contacts"
            app:srcCompat="@drawable/contactlisticon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button_to_display_map_locations_of_contacts"
            app:srcCompat="@drawable/mapicon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button_to_change_settings"
            app:srcCompat="@drawable/settingsicon"
            tools:ignore="RedundantDescriptionCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/togglebutton"
            android:textColor="#455A64"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/save_button" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="49dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="14"
                android:inputType="textPersonName"
                android:hint="Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textContact"/>

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editName" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="16"
                android:inputType="textPersonName"
                android:hint="@string/enter_street_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAddress"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/editCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editAddress"
                android:ems="9"
                android:hint="@string/city"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/editState"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/editState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/editCity"
                app:layout_constraintTop_toBottomOf="@id/editAddress"
                android:ems="2"
                android:hint="@string/state"
                android:maxLength="2"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/editZipcode"
                android:inputType="textCapCharacters" />

            <EditText
                android:id="@+id/editZipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/editState"
                app:layout_constraintTop_toBottomOf="@id/editAddress"
                android:ems="5"
                android:hint="@string/zipcode"
                android:maxLength="5"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/editHome"
                android:inputType="number" />
            <TextView
                android:id="@+id/textHome"
                android:text="@string/home_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editCity" />

            <EditText
                android:id="@+id/editHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="8"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:nextFocusDown="@+id/editCell"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textHome"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textCell"
                android:text="@string/cell_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/editHome"
                app:layout_constraintTop_toBottomOf="@id/editCity" />
            <EditText
                android:id="@+id/editCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toStartOf="@+id/textCell"
                app:layout_constraintTop_toBottomOf="@+id/textCell"
                android:ems="8"
                android:maxLength="14"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/editEMail"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textEMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/email_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editHome" />
            <EditText
                android:id="@+id/editEMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textEMail"
                android:ems="16"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/textEMail"
                android:inputType="phone" />
            <TextView
                android:id="@+id/textBday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/bday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editEMail" />
            <TextView
                android:id="@+id/textBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/birthday"
                app:layout_constraintTop_toBottomOf="@id/editEMail"
                app:layout_constraintStart_toEndOf="@+id/textBday"/>
            <Button
                android:id="@+id/btnBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:text="@string/change"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/textBirthday"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>