<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/switchDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="Delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="New"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_to_display_a_list_of_contacts"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/contactlisticon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_to_display_map_locations_of_contacts"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/mapicon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_to_change_settings"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/settingsicon"
            tools:ignore="RedundantDescriptionCheck" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvContacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>