<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactSettingsActivity">
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button_to_display_a_list_of_contacts"
            app:srcCompat="@drawable/contactlisticon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button_to_display_map_locations_of_contacts"
            app:srcCompat="@drawable/mapicon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button_to_change_settings"
            app:srcCompat="@drawable/settingsicon"
            tools:ignore="RedundantDescriptionCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Sort Contacts By:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupSortBy"
        android:layout_width="183dp"
        android:layout_height="137dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <RadioButton
            android:id="@+id/radioName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name" />

        <RadioButton
            android:id="@+id/radioCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="City" />

        <RadioButton
            android:id="@+id/radioBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Birthday"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="69dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Sort Order:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSortBy" />

    <RadioGroup
        android:id="@+id/radioGroupSortOrder"
        android:layout_width="176dp"
        android:layout_height="95dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <RadioButton
            android:id="@+id/radioAscending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ascending" />

        <RadioButton
            android:id="@+id/radioDescending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Descending"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>